--- a/public/404.html
+++ b/public/404.html
@@ -56,12 +56,12 @@
 
 <body class="rails-default-error-page">
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
+  <div class="dialog banner-center">
     <div>
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p> click here to get back to Hopfit<%= link_to "Hopfit", root_path, class: "banner-wagon-button btn-skyblue" %></p>
   </div>
 </body>
 </html>
